spec/e2e/operator/multiply_num_nonnum.lit
1 * "1"; # error: [line 1] Operands must be two numbers or two strings.
